# PAD2Skills-viz

./: .gitignore  LICENSE  PAD2Skills.py  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.streamlit/: config.toml
data/: project_occupation_data.csv
pages/: 01_Occupations_Overview.py  02_Skills_by_Level.py  03_test_layout.py  99_test_layout.py
src/: charts.py  chat.py  components.py  io.py  styles.py
