[project]
name = "pad2skills-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pyarrow>=22.0.0",
    "streamlit>=1.52.2",
    "streamlit-extras>=0.7.8",
    "streamlit-float>=0.4.0",
    "streamlit-keyup>=0.3.0",
]

[project.scripts]
pad-skills = "main:main"
